# function_maxima

./: CMakeLists.txt  README.md  compile.sh  run.sh
src/: CursedAllocator.cpp  function_maxima.h  skrypt.sh  skryptFlags.sh  skryptValgrind.sh  test  test.cc  test_damiana.cc
tests/: CMakeLists.txt  maximaTest.cpp  wyjatkowy_int.cpp
testyDamiana/: skrypt.sh  test_damiana.cc
